@@ -1,5 +1,6 @@
 version 0.2.2
-- Fixed (harmless) compiler warning (thanks to Brian Ripley)
+- fixed (harmless) compiler warning (thanks to Brian Ripley)
+- bugfix: empty [] selection on expressionset crashed (thanks to Anne Petersen)
 
 version 0.2.1
 - Set membership operator %in% is now replaced with %vin% (#80).
